--- a/module11/src/main/resources/application.yml
+++ b/module11/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
 
 datasource:
   url: jdbc:postgresql://localhost:5432/postgres
-  username: root
-  password: 1234
+  username: user
+  password: password
 jpa:
   hibernate:
     ddl-auto: create-drop
